dataset1235/2025-2/2318198438/users/323753343/executions/2445341515_3900746921.log
== RUN (2025-09-02 00:43:53)
-- CODE: 
print("23,4 * 3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
23,4 * 3
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
23,4 * 3
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
23,4 * 3
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
23,4 * 3
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
23,4 * 3
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
23,4 * 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:42:57)
-- CODE: 
input("23,4 * 3")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
23,4 * 3
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
23,4 * 3
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
23,4 * 3
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
23,4 * 3
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
23,4 * 3
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
23,4 * 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:41:42)
-- CODE: 
input(print=peso)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print=peso)
                ^^^^
NameError: name 'peso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:37:44)
-- CODE: 
input(peso * quantidade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso * quantidade)
          ^^^^
NameError: name 'peso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:39:46)
-- CODE: 
input(peso)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:40:16)
-- CODE: 
input(23,5 * 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(23,5 * 3)
TypeError: input expected at most 1 argument, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:38:31)
-- CODE: 
input(print)(peso * quantidade))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
File "XXXX", line 1
    input(print)(peso * quantidade))
                                   ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:42:02)
-- CODE: 
input(peso)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(peso)
          ^^^^
NameError: name 'peso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:42:25)
-- CODE: 
input("peso")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
peso
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
peso
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
peso
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
peso
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
peso
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
peso
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:44:24)
-- CODE: 
input("23,4 * 3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
23,4 * 3
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
23,4 * 3
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
23,4 * 3
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
23,4 * 3
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
23,4 * 3
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
23,4 * 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:42:59)
-- CODE: 
input("23,4 * 3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
23,4 * 3
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
23,4 * 3
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
23,4 * 3
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
23,4 * 3
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
23,4 * 3
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
23,4 * 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:44:09)
-- CODE: 
round("23,4 * 3")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("23,4 * 3")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:48:22)
-- CODE: 
input("")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4335
75.60
---- correct output:
3805.8
---- user output:
None
-- TEST CASE 2:
---- input:
1999
156.08
---- correct output:
906.44
---- user output:
None
-- TEST CASE 3:
---- input:
2234.4
11.75
---- correct output:
2152.15
---- user output:
None
-- TEST CASE 4:
---- input:
2000.3333
20.11
---- correct output:
1859.56
---- user output:
None
-- TEST CASE 5:
---- input:
5273
72.19
---- correct output:
4767.67
---- user output:
None
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
859.56
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
